# solid-lamp

./: data_manager.py  flight_data.py  flight_search.py  main.py  notification_manager.py  pyproject.toml
data/: flight_deal_prices.csv
src/: flight_data.py  flight_search.py  main.py
tests/: test_flight_search.py
